# aaa

./: .clang-format  .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.md  README.md  TODO.md  aaa.lark  aaa.py  dump  grammar.txt  manage.py  pyproject.toml  pytest.ini  run_aaa.sh  stackbug.aaa  syntax.json  zip.aaa
.github/workflows/: semi-linear.yml  workflow.yml
aaa/: Cargo.toml  __init__.py  formatter.py  run.py  run_tests.py
aaa-stdlib/: Cargo.toml
aaa-stdlib-user/: Cargo.toml
aaa-stdlib-user/src/: main.rs
aaa-stdlib/src/: hashtable.rs  interface.rs  lib.rs  map.rs  set.rs  stack.rs  var.rs  vector.rs
aaa-vscode-extension/: README.md  language-configuration.json  package.json
aaa-vscode-extension/syntaxes/: aaa.tmLanguage.json
aaa/cross_referencer/: cross_referencer.py  exceptions.py  models.py
aaa/instruction_generator/: instruction_generator.py  models.py
aaa/parser/: __init__.py  aaa.lark  exceptions.py  models.py  new_parser.py  parser.py  single_file_parser.py  tokenizer.py  transformer.py
aaa/parser/lib/: __init__.py  exceptions.py  file_parser.py  models.py  parser.py  syntax_loader.py
aaa/runner/: exceptions.py  run_tests.aaa  runner.py  test_runner.py
aaa/simulator/: debug.py  exceptions.py  models.py  simulator.py  variable.py
aaa/src/: main.rs
aaa/src/common/: files.rs  formatting.rs  hash.rs  mod.rs  position.rs  traits.rs
aaa/src/cross_referencer/: cross_referencer.rs  errors.rs  mod.rs
aaa/src/cross_referencer/types/: function_body.rs  identifiable.rs
aaa/src/parser/: mod.rs  parser.rs  types.rs
aaa/src/runner/: errors.rs  mod.rs  runner.rs
aaa/src/tests/: doctests.rs  test_code.aaa
aaa/src/tests/src/: assign.aaa  branch.aaa  builtin.aaa  call_enum.aaa  call_keyword.aaa  call_struct.aaa  enum_constructor.aaa  get_field.aaa  get_function.aaa  import.aaa  interface.aaa  main_function.aaa  match.aaa  member_function.aaa  naming.aaa  set_field.aaa  stack.aaa  use.aaa  while.aaa
aaa/src/tokenizer/: mod.rs  tokenizer.rs  types.rs
aaa/src/transpiler/: code.rs  mod.rs  transpiler.rs
aaa/src/type_checker/: call_checker.rs  errors.rs  mod.rs  type_checker.rs
aaa/tokenizer/: constants.py  exceptions.py  models.py  regex.py  tokenizer.py
aaa/transpiler/: aaa.c  aaa.h  code.py  transpiler.py
aaa/type_checker/: exceptions.py  models.py  type_checker.py
c/: CMakeLists.txt  aaa.c  aaa.h  buffer.c  buffer.h  httpserver.c  map.c  map.h  ref_count.c  ref_count.h  stack.c  stack.h  str.c  str.h  strbuff.c  strbuff.h  struct.c  struct.h  types.h  var.c  var.h  vector.c  vector.h
docs/: direnv.md  examples.md  faq.md  implementation.md  setup.md  stack.md  syntax.md  the_stack.md  typing.md
examples/: const.aaa  enum.aaa  fizzbuzz.aaa  foreach.aaa  function_demo.aaa  game_of_life.aaa  http_client.aaa  http_server.aaa  json.aaa  modify_map_during_iter.aaa  modify_vec_during_iter.aaa  one_to_ten.aaa  pair.aaa  pair_partial.aaa  print_number.aaa  print_twice.aaa  recursion.aaa  return.aaa  shell.aaa  struct.aaa  struct_fields.aaa  sudoku_solver.aaa  sudoku_solver.py  syscalls.aaa  tree.aaa  typing_playground.aaa  vector_sum.aaa
examples/errors/: absolute_import.aaa  argument_argument_collision.aaa  argument_function_collision.aaa  branch_type.aaa  condition_type_branch.aaa  condition_type_loop.aaa  function_function_collision.aaa  function_type.aaa  imported_item_not_found.aaa  invalid_main_signature.aaa  loop_type.aaa  multiple_errors.aaa  stack_type.aaa  stack_underflow.aaa  unknown_function.aaa  unknown_placeholder.aaa  unknown_type.aaa
examples/http/: client.aaa  request.aaa  response.aaa  router.aaa  server.aaa  util.aaa
examples/import/: imported.aaa  (+1 more)
lang/: exceptions.py  grammar.py  instruction_generator.py  instruction_types.py  instructions.py  new_tokenizer.py  operations.py  parse.py  program.py  run.py  simulator.py  tokenize.py  type_checker.py  types.py
python/: pyproject.toml
python/aaa/cross_referencer/: models.py
python/aaa/runner/: exceptions.py  runner.py  test_runner.py
python/aaa/transpiler/: code.py
python/aaa/type_checker/: models.py
python/tests/: test_tokenizer.py
python/tests/aaa/: __init__.py  test_aaa_unit_tests.py
python/tests/aaa/docs/: test_examples.py
python/tests/aaa/lang_constructs/: test_function_pointers.py  test_return.py
python/tests/aaa/lang_constructs/src/function_pointers/: in_struct.aaa  returned.aaa  zero_value_on_stack.aaa
python/tests/aaa/lang_constructs/src/function_pointers/imported/: importee.aaa
python/tests/aaa/lang_constructs/src/struct_type_parameters/: pair.aaa  pair_partial.aaa  tree.aaa
python/tests/aaa/misc/src/: divide_by_zero.aaa  enum.aaa  execve_fail.aaa  foreach_map.aaa  foreach_map_empty.aaa  foreach_set.aaa  foreach_vector.aaa  foreach_vector_empty.aaa  getcwd.aaa  getenv_fail.aaa  getenv_ok.aaa  main_with_argv.aaa  struct.aaa  time.aaa  unsetenv.aaa  waitpid_ok.aaa
python/tests/selfhosting/: test_tokenizer.py
rust/: Cargo.toml
samples/: print_number.aaa
stdlib/: builtin.aaa  builtins.aaa  enums.aaa  test_builtins.aaa  test_enums.aaa  test_stdlib.aaa
tests/: conftest.py  test_dummy.py  test_examples.py  test_extension.py  test_formatter.py  test_grammar.py  test_instruction.py  test_new_parser.py  test_new_tokenizer.py  test_parse.py  test_parser.py  test_program.py  test_run.py  test_simulator.py  test_single_file_parser.py  test_tokenize.py  test_tokenizer.py  test_type_checker.py
(+237 files in other folders)
