[tool.poetry]
name = "aaa"
version = "0.1.0"
description = ""
authors = ["Luuk Verweij <luuk_verweij@msn.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.2"
click = "^8.1.3"
lark-cython = "^0.0.13"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
mypy = "^0.971"

[tool.poetry.group.dev.dependencies]
types-click = "^7.1.8"
snakeviz = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
