[tool.poetry]
name = "aaa"
version = "0.1.0"
description = ""
authors = ["Luuk Verweij <luuk_verweij@msn.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pdbpp = "^0.10.3"
pre-commit = "^3.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
snakeviz = "^2.1.1"
types-click = "^7.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
