[project]
authors = [
    {name = "Luuk Verweij", email = "luuk_verweij@msn.com"},
]
requires-python = ">=3.11.3,<4.0"
dependencies = [
    "click>=8.1.3",
    "basil @ git+https://github.com/lk16/basil.git@v0.4.0",
]
name = "Aaa"
version = "0.1.0"
description = "Stack-based languge"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "pdbpp>=0.10.3",
    "pre-commit>=3.0.1",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "types-click>=7.1.8",
    "requests>=2.31.0",
    "types-requests>=2.31.0.1",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
