[package]
name = "aaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.4"
rstest = "0.19.0"
sha2 = "0.10.8"
